--- a/expense_server/server_app/templates/index.html
+++ b/expense_server/server_app/templates/index.html
@@ -2,16 +2,16 @@
 
 <br/><br/>
 
-<h3>Expenses by Type</h3>
-<p><b>Lint</b> = <a href="/expense_by_type/">http://127.0.0.1:8000/expense_by_type/</a></p>
+<h3>Total expense for each expense type</h3>
+<p><b>Lint</b> = <a href="/expenses_by_type/">http://127.0.0.1:8000/expenses_by_type/</a></p>
 
 <br/><br/>
 
-<h3>Monthly Expenses</h3>
+<h3>Monthly total expenses</h3>
 <p><b>Lint</b> = <a href="/monthly_expenses/">http://127.0.0.1:8000/monthly_expenses/</a></p>
 
 <br/><br/>
 
-<h3>Detailed Expenses</h3>
+<h3>Breakdown of expenses by expense type</h3>
 <p><b>Lint</b> = <a href="/detailed_breakdown/">http://127.0.0.1:8000/detailed_breakdown/</a></p>
 
